[PCXN-50]:fixed encoding errors
Took 7 minutes